--- a/style.css
+++ b/style.css
@@ -161,3 +161,137 @@ section{
   font-weight: 700;
   margin: 10px;
 }
+
+.projects{
+  background-color: #f7f7f7;
+  height: 100vh;
+}
+
+.content-projects{
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.card-projects{
+  background-color: #fff;
+  width: 21.25em;
+  box-shadow: 0 5px 25px rgba(1, 1, 1, 15%);
+  border-radius: 10px;
+  padding: 40px;
+  margin: 15px;
+  transition: 0.7s ease;
+}
+
+.card-projects:hover{
+  transform: scale(1.1);
+}
+
+.icon-projects{
+  color: #3a6cf4;
+  font-size: 8em;
+  text-align: center;
+}
+
+.info-projects{
+  text-align: center;
+}
+
+.info-projects h3{
+  color: #3a6cf4;
+  font-size: 1.2em;
+  font-weight: 700;
+  margin: 10px;
+}
+
+#contact-form {
+  background-color: #f9f9f9;
+  padding: 50px;
+  margin: 50px auto;
+  max-width: 600px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#contact-form h2 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+#contact-form label {
+  display: block;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+#contact-form input[type="text"],
+#contact-form input[type="email"],
+#contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+#contact-form textarea {
+  resize: vertical;
+  min-height: 100px;
+}
+
+#contact-form button[type="submit"] {
+  display: block;
+  margin: 20px auto 0;
+  padding: 10px 20px;
+  background-color: #0077cc;
+  color: #fff;
+  border: none;
+  border-radius: 20px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+#contact-form button[type="submit"]:hover {
+  background-color: #005ea6;
+}
+
+.projects .card-projects{
+  display: inline-flex;
+  width: 100%;
+}
+
+.projects{
+  height: 1200px;
+}
+/* #contact-form{
+  margin-top:2000px;
+} */
+
+span{
+  color:#3a6cf4;
+}
+
+footer{
+  width: 100%;
+  height: 70px;
+  background-color: #f0f0f0;
+}
+footer p{
+  color: black;
+  text-align: center;
+  padding-top: 20px;
+  font-weight: bold;
+
+}footer p span{
+  color: #0caa00;
+}
+
+.info-projects a{
+  color: black;
+  text-decoration: none;
+}
